[package]
name = "greco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal", "process"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.164", features = ["derive"] }
actix-cors = "0.6.4"
reqwest = { version = "0.11.18", features = ["json"] }
url = "2.4.0"
tempfile = "3.7.0"
once_cell = "1.18.0"
base64 = "0.21.2"
